--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,10 @@ button:focus-visible {
   background-color: green;
 }
 
+.card:hover {
+  opacity: 0.5;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
